Moved Basic Auth to crm utils